# pybilimusic

./: .gitignore  LICENSE  README.md  README_EN.md  config.py  download_mp3.py  download_mp3_backup.py  download_mp4.py  downloading.py  first_release.py  generate_w_rid_and_wts.py  initial_setup.py  main.py  main_CUI.py  main_GUI.py  networkTest.py  player-view-sdk.js  pyproject.toml  requirements.txt  select_file.py  setup.py  song_search.py  test.py  transform.py  windows.py  windows.ui
cli/: pyproject.toml  setup.py
cli/src/: __init__.py  download_mp4.py  main_CLI.py  song_search.py
cli/src/pybilibilimusic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
