[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybilibilimusic"
version = "1.0.0"
description = "A command-line tool to download Bilibili videos and convert them to MP3 format"
authors = [
    {name = "Minecraft", email = "shanghai_chengren@126.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["bilibili", "download", "video", "mp3", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.7"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "urllib3>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/pybilibilimusic/pybilimusic"
Repository = "https://github.com/pybilibilimusic/pybilimusic"
Issues = "https://github.com/pybilibilimusic/pybilimusic/issues"

[project.scripts]
pybilibilimusic = "cli.src.main_CLI:main"